<?xml version="1.0"?>
<package>
  <name>belt_grinder</name>
  <version>1.0.10</version>
  <description>none</description>
  <author email="gaoyongzhuo@yeah.net">Gao Yongzhuo</author>
  <maintainer email="gaoyongzhuo@yeah.net">Gao Yongzhuo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
