<?xml version="1.0"?>
<package>
  <name>compensation_cylinder</name>
  <version>1.0.10</version>

  <author email="gaoyongzhuo@yeah.net">Gao Yongzhuo</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
